#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
CR-2009-10-19-0: Bugfix:     Fixed possible TCL error when automatic shadowd
                             installation fails
                 Belongs to: CR-2009-10-12-0
                 Review:     AP

CR-2009-10-16-2: Bugfix:     fixed 2136 check
                 Review:     TBD

CR-2009-10-16-1: Bugfix:     o Arco junit test was running on java build host
                             o Added some logging to the arco junit test
                 Review:     SH

SH-2009-10-16-0: Bugfix:     Do not check online maxvmen usage on GE < 62
                 Review:     CR

CR-2009-10-16-0: Bugfix:     o fixed automounter prefix problem in qsub test
                             o increased timeout for arco junit test
                 Review:     SH

TB-2009-10-16-0: Bugfix:     hedeby_get_version_num (sic!) replaced by
                             hedeby_get_version in slo/permanentRequest test
                 Belongs to: LP-2009-10-14-0
                 Review:     RH

CR-2009-10-15-0: Bugfix:     - fixed arco dbwriter tests
                             - fixed qsub test
                             - new procedure wait_for_event_client()
                             - startup_qmaster now waits until qmaster is 
                               available
                             - get_event_client_list() was duplicate defined.
                               added new parameter to get evc list.
                 Review:     SH

TB-2009-10-15-0: Enhancem.:  error logging to STDOUT now contains complete
                             stacktrace