@@ -6,6 +6,9 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+AP-2009-10-19-0: Bugfix:     Manual tests adjustment.
+                 Review:     LP
+
 CR-2009-10-19-0: Bugfix:     Fixed possible TCL error when automatic shadowd
                              installation fails
                  Belongs to: CR-2009-10-12-0
